WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286596
[css-nesting] Empty CSSNestedDeclarations should not affect serialization
https://bugs.webkit.org/show_bug.cgi?id=286596
Summary
[css-nesting] Empty CSSNestedDeclarations should not affect serialization
Matthieu Dubet
Reported
2025-01-27 15:13:48 PST
https://wpt.fyi/results/css/css-nesting/nested-declarations-cssom-whitespace.html?label=experimental&label=master&aligned
Attachments
Add attachment
proposed patch, testcase, etc.
Matthieu Dubet
Comment 1
2025-01-27 15:43:33 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39607
EWS
Comment 2
2025-01-28 09:57:27 PST
Committed
289456@main
(09e71bdf8646): <
https://commits.webkit.org/289456@main
> Reviewed commits have been landed. Closing PR #39607 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-01-28 09:59:28 PST
<
rdar://problem/143766962
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug