[CSS] Empty CSSNestedDeclarations should not affect serialization https://bugs.webkit.org/show_bug.cgi?id=286596

Reviewed by Tim Nguyen.

* LayoutTests/imported/w3c/web-platform-tests/css/css-nesting/nested-declarations-cssom-whitespace-expected.txt:
* Source/WebCore/css/CSSGroupingRule.cpp:
(WebCore::CSSGroupingRule::cssTextForRules const):
* Source/WebCore/css/CSSStyleRule.cpp:
(WebCore::CSSStyleRule::cssTextForRules const):

Canonical link: https://commits.webkit.org/289456@main